--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -13,7 +14,72 @@
 </head>
 
 <body>
+    <main class="layout-container">
+        <div class="person-sidebar">
+            <div class="person-wrapper">
+                <h1>Name</h1>
+                <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                <span id="sidebar-status">Status</span>
+                <span id="sidebar-species">Species</span>
+                <span id="sidebar-gender">Gender</span>
+                <span id="sidebar-location">Last Known Location</span>
+            </div>
+        </div>
+        <div class="page-container">
+            <h2>Intergalatic Goverment Search Tool</h2>
+            <div class="search-container">
+                <form class="search-bar">
+                    <input type="text" name="search" placeholder="Enter Being's Name To Search" />
+                    <button type="submit">Search</button>
+                </form>
+            </div>
 
+            <h2>Other Residents of Earth (C-137)</h2>
+            <div class="being-card-container">
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+                <div class="card">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" />
+                    <span>Name</span>
+                    <span>Species - Status</span>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
