--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="./assets/js/script.js"></script>
+    <script src="./assets/js/fontawesome.js" crossorigin="anonymous"></script>
     <title>IGST</title>
 </head>
 
@@ -19,6 +20,7 @@
             <div class="person-wrapper">
                 <h1>Name</h1>
                 <img />
+                <span id="add-to-radar-btn"><b>Add To Radar</b> <i class="fal fa-radar"></i></span>
                 <span id="sidebar-status">Status</span>
                 <span id="sidebar-species">Species</span>
                 <span id="sidebar-gender">Gender</span>
@@ -50,6 +52,7 @@
                     <button type="submit">Search</button>
                 </form>
             </div>
+            <h2 class="load-radar">Load My Radar <i class="fal fa-radar"></i></h2>
 
             <h2 id="other-residents-title">Other Residents of</h2>
             <div class="being-card-container"></div>
