added the ability to remove beings from radar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="person-wrapper">
                 <h1>Name</h1>
                 <img />
-                <span id="add-to-radar-btn"><b>Add To Radar</b> <i class="fal fa-radar"></i></span>
+                <span id="add-to-radar-btn"><i class="fal fa-radar"></i></span>
                 <span id="sidebar-status">Status</span>
                 <span id="sidebar-species">Species</span>
                 <span id="sidebar-gender">Gender</span>
